- implemented saving the opened germplasm detail tab in a list. The list is save in the listnms and listdata table in the local instance of the database - added Save to List button to open a dialog box for the list name input. - added Close all tab button to close all germplasm detail tab
git-svn-id: https://efficio.atlassian.net/svn/GCP/trunk/GermplasmStudyBrowser@359 4ebb2e00-0138-4608-bc6e-edf3948d4863